--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="row">
             <div>
-                <p>These are certificates I have recieved over the years, most of them recent. I am continuelly looking to grow my knowledge and better my self professionally, and I believe doing courses helps. I am mostly using Coursera, but I am also using multiple other sites to do course work, not only in web development, but also other parts of IT and computer work as well. I think expanding your knowledge in all aspects of computers, how they work from the inside and out can help tremendously in becoming a better Developer.</p>
+                <p>I am continually looking to grow my knowledge, better myself professionally and I believe doing courses helps. I am mostly using Coursera, but I am also using multiple other sites to do course work. These certificates are not only in web development, but also other parts of IT and computer work as well. I think expanding my knowledge in all aspects of computers, how they work from the inside and out will help me tremendously in becoming a well rounded Developer.</p>
             </div>
         </div>
     </div>
