--- a/index.html
+++ b/index.html
@@ -43,6 +43,25 @@
                     <li>Developing Front-End Apps with React <a href="https://coursera.org/verify/VTCGDPDFSM26">Verify</a></li>
                     <li>Getting Started with Ubuntu Linux <a href="https://coursera.org/verify/FMB5MLCUESYK">Verify</a></li>
                     <li>Designing User Interfaces and Experiences (UI/UX) <a href="https://coursera.org/verify/S6A8PCH9KF2Y">Verify</a></li>
+                    <br>
+
+                    <li>Introduction to Techinical Support - IBM  <a href="https://coursera.org/verify/D2E717HFK92Y">Verify</a></li>
+                    <li>Introduction to Hardware and Operating Systems - IBM <a href="https://coursera.org/verify/63BCO6UGKDSO">Verify</a></li>
+                    <li>Introduction to Software, Programming, and Databases - IBM<a href="https://coursera.org/verify/G6DST3DU4DM9">Verify</a></li>
+                    <li>Introduction to Networking and Storage - IBM <a href="https://coursera.org/verify/6P20ZP3NDYP0">Verify</a></li>
+                    <li>Introduction to Cybersecurity Essentials - IBM <a href="https://coursera.org/verify/OW3S59OGJEOZ">Verify</a></li>
+                    <li>Introduction to Cloud Computing - IBM<a href="https://coursera.org/verify/2GADXDKY2ZNA">Verify</a></li>
+                    <li>Techinical Support (IT) Case Studies and Capstone - IBM <a href="https://coursera.org/verify/Z3ECP4NFPWW6">Verify</a></li>
+                    <li>Tech Support Career Guide and Interview Preperation - IBM <a href="https://coursera.org/verify/EKZLHAXHM3RG">Verify</a></li>
+                    <li>IBM IT Support <a href="https://coursera.org/verify/professional-cert/A4988IPLGPB2">Verify</a></li>
+                    <br>
+                    
+                    <li>Techinical Support Fundamentals - Google <a href="https://coursera.org/verify/DJD8RRMGP48R">Verify</a></li>
+                    <li>The Bits and Bytes of Computer Networking - Google <a href="https://coursera.org/verify/MCFHJ2K9SEXA">Verify</a></li>
+                    <li>Operating Systems and You: Becoming a Power User - Google <a href="https://coursera.org/verify/YH5JC9385FZS">Verify</a></li>
+                    <li>System Administration and IT Infrastructure Services - Google <a href="https://coursera.org/verify/H6G4NGNB4PKP">Verify</a></li>
+                    <li>IT Security: Defense against the digital dark arts - Google <a href="https://coursera.org/verify/AERVD327JZLH">Verify</a></li>                    
+                    <li>Google IT Support <a href="https://coursera.org/verify/professional-cert/4ZJ75LE7WP9J">Verify</a></li>
                 </ul>
             </div>
         </div>
